fixed alignment of tables in Admin page

--- a/pages/admin/admin.module.css
+++ b/pages/admin/admin.module.css
@@ -22,7 +22,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   background-color: black;
 }
 
